--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,18 @@
             android:label="@string/title_activity_trophy"
             android:theme="@style/FullscreenTheme" >
         </activity>
+        <activity
+            android:name=".QuestionTwoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_question_two"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
+        <activity
+            android:name=".QuestionThreeActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_question_three"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
     </application>
 
 </manifest>
