--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,12 @@
             android:label="@string/title_activity_question_three"
             android:theme="@style/FullscreenTheme" >
         </activity>
+        <activity
+            android:name=".QuestionActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_question"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
     </application>
 
 </manifest>
