--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "cheesy.ultra.mundane.trophies.swipy"
         minSdkVersion 18
-        targetSdkVersion     21
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -17,15 +17,22 @@ android {
         release {
         }
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+        exclude 'LICENSE.txt'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21.+'
+
     compile 'com.android.support:appcompat-v7:21.0.+'
 
-    androidTestCompile 'org.robolectric:robolectric:2.3'
-    androidTestCompile('junit:junit:4.11') {
+    androidTestCompile 'org.hamcrest:hamcrest-core:1.3'
+    androidTestCompile 'org.robolectric:robolectric:2.4'
+    androidTestCompile('junit:junit:4.12') {
         exclude module: 'hamcrest-core'
     }
 }
