--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,25 @@
 apply plugin: 'com.android.application'
 apply plugin: 'robolectric'
 
-
 android {
     compileSdkVersion 21
-    buildToolsVersion "20.0.0"
+    buildToolsVersion "21.0"
 
     defaultConfig {
-        applicationId "cheesy.ultra.mundane.trophies.swipy"
-        minSdkVersion 18
+        applicationId "swipy.trophies.mundane.ultra.cheesy.swipy"
+        minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
     buildTypes {
         release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     packagingOptions {
@@ -23,32 +28,17 @@ android {
         exclude 'META-INF/NOTICE'
         exclude 'LICENSE.txt'
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:21.0.+'
+    compile 'com.squareup.assertj:assertj-android:1.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.3'
 
-    androidTestCompile 'org.hamcrest:hamcrest-core:1.3'
-    androidTestCompile 'org.robolectric:robolectric:2.4'
-    androidTestCompile('junit:junit:4.12') {
-        exclude module: 'hamcrest-core'
-    }
-}
-
-robolectric {
-    // configure the set of classes for JUnit tests
-    include '**/*Test.class'
-    exclude '**/espresso/**/*.class'
-
-    // configure max heap size of the test JVM
-    maxHeapSize = '2048m'
-
-    // configure whether failing tests should fail the build
-    ignoreFailures false
-
-    afterTest { descriptor, result ->
-        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
-    }
+    // androidTestCompile 'junit:junit:4.11'
+    // androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
 }
