--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'src/main', include: ['*.jar'])
 
     compile 'com.squareup.assertj:assertj-android:1.0.0'
     compile 'com.android.support:appcompat-v7:21.0.3'
