--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
-language: java
+language: android
+android:
+  components:
+    - build-tools-21.1.1
+    - android-21
+    - extra
 script:
-  - ci.sh
+    - ci.sh
