--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     compile 'com.squareup.assertj:assertj-android:1.0.0'
     compile 'com.android.support:appcompat-v7:21.0.3'
 
+    compile "com.tojc.ormlite.android:ormlite-content-provider-library:1.0.4@jar" // @aar or @jar
+    compile "com.tojc.ormlite.android:ormlite-content-provider-compiler:1.0.4" // jar only
+
     // androidTestCompile 'junit:junit:4.11'
     // androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
 }
