--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cheesy.ultra.mundane.trophies.swipy" >
 
-    <uses-sdk android:minSdkVersion="18"
-        android:targetSdkVersion="21"/>
+    <uses-sdk
+        android:minSdkVersion="18"
+        android:targetSdkVersion="21" />
+
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <provider android:name=".model.ObtainedTrophyProvider"
+        <provider
+            android:name=".model.ObtainedTrophyProvider"
             android:authorities="cheesy.ultra.mundane.trophies.swipy.model"
-            android:exported="false"/>
+            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -34,6 +45,10 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_end"
             android:theme="@style/FullscreenTheme" >
+        </activity>
+        <activity
+            android:name=".TrophyListActivity"
+            android:label="@string/title_activity_trophy_list" >
         </activity>
     </application>
 
